# Frontloader

./: .gitignore  CMakeLists.txt  README.md  gui_install.sh  install.sh  install_canary.sh  install_frontloader.desktop  uninstall.sh
.circleci/: config.yml  objdump_linux.sh  release_github.sh  stage.sh  zip_linux.sh
.github/: FUNDING.yml
.github/workflows/: build.yaml
assets/: CMakeLists.txt  assets.qrc
assets/frontloader/frontends/: Desktop.front  ES-DE.front  OGUI.front  SteamOS.front  metadata.frontloader.txt
assets/frontloader/scripts/: Constructor.sh  Destructor.sh  EmuDeck.sh  Events.sh  Launchers.sh  Logging.sh  gamescope-other.sh  gamescope-session.sh  gamescope-steam.sh
assets/frontloader/services/example-service/: events.sh  meta.sh
cmake/: PegasusQtUtils.cmake
src/: deployment_vars.pri  link_to_backend.pri
src/app/: CMakeLists.txt  app.pro  install.pri  main.cpp
src/app/platform/android/: AndroidManifest.xml
src/app/platform/android/res/xml/: fileprovider_paths.xml
src/app/platform/linux/: org.pegasus_frontend.Pegasus.metainfo.xml
src/backend/: AppSettings.cpp  AppSettings.h  AutobootManager.cpp  AutobootManager.h  Backend.cpp  Backend.h  CMakeLists.txt  CliArgs.h  FrontendLayer.cpp  FrontendLayer.h  Log.cpp  Log.h  Paths.cpp  Paths.h  PegasusAssets.cpp  PegasusAssets.h  ProcessLauncher.cpp  ProcessLauncher.h  ScriptRunner.cpp  ScriptRunner.h
src/backend/imggen/: BlurhashProvider.cpp  BlurhashProvider.h  CMakeLists.txt
src/backend/model/: Api.cpp  Api.h  CMakeLists.txt  ObjectListModel.h
src/backend/model/device/: DeviceInfo.cpp  (+1 more)
src/backend/parsers/: CMakeLists.txt  MetaFile.cpp  MetaFile.h  SettingsFile.cpp  SettingsFile.h
src/backend/platform/: AndroidAppIconProvider.cpp  AndroidAppIconProvider.h  AndroidHelpers.cpp  AndroidHelpers.h  CMakeLists.txt  PowerCommands.h  PowerCommands_linux.cpp  PowerCommands_mac.cpp  PowerCommands_unimpl.cpp  PowerCommands_win.cpp  TerminalKbd.cpp  TerminalKbd.h
src/backend/providers/: CMakeLists.txt  Provider.cpp  Provider.h  ProviderManager.cpp  ProviderManager.h  ProviderUtils.cpp  ProviderUtils.h  SearchContext.cpp  SearchContext.h  providers.pri
src/backend/types/: AppCloseType.h  AssetType.h  CMakeLists.txt  GamepadKeyId.h  KeyEventType.h  VolumeChangeType.h  types.pri
src/backend/utils/: CMakeLists.txt  CommandTokenizer.cpp  CommandTokenizer.h  DiskCachedNAM.cpp  DiskCachedNAM.h  FakeQKeyEvent.cpp  FakeQKeyEvent.h  FolderListModel.cpp  FolderListModel.h  HashMap.h  KeySequenceTools.cpp  KeySequenceTools.h  PathTools.cpp  PathTools.h  SqliteDb.cpp  SqliteDb.h  StdHelpers.h  StringHelpers.cpp  StringHelpers.h
src/frontend/: AutobootLayer.qml  CMakeLists.txt  frontend.qrc  main.qml
src/themes/: themes.qrc
src/themes/Minimis/: README.md  database.js  settings.js  utils.js
tests/: CMakeLists.txt
tests/backend/api/: CMakeLists.txt
tests/backend/configfile/: CMakeLists.txt
tests/backend/processlauncher/: CMakeLists.txt
tests/backend/providers/: providers.pro
tests/backend/utils/: CMakeLists.txt
tests/benchmarks/configfile/: CMakeLists.txt
tests/benchmarks/pegasus_provider/: CMakeLists.txt
tests/integration/apng/: CMakeLists.txt
tests/integration/blurhash/: CMakeLists.txt
(+163 files in other folders)
